[gd_scene load_steps=3 format=3 uid="uid://bl0t6rm13hukk"]

[ext_resource type="Script" path="res://game.gd" id="1_0d6ki"]
[ext_resource type="PackedScene" uid="uid://chg25idolwddw" path="res://player.tscn" id="1_lk51x"]

[node name="Game" type="Node2D"]
script = ExtResource("1_0d6ki")
player_scene = ExtResource("1_lk51x")

[node name="World" type="Node2D" parent="."]

[node name="HostButton" type="Button" parent="."]
offset_left = 1053.0
offset_top = 7.0
offset_right = 1097.0
offset_bottom = 38.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
offset_left = 1106.0
offset_top = 7.0
offset_right = 1144.0
offset_bottom = 38.0
text = "Join
"

[node name="LeaveButton" type="Button" parent="."]
offset_left = 1090.0
offset_top = 46.0
offset_right = 1143.0
offset_bottom = 77.0
text = "Leave"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../World")

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="LeaveButton" to="." method="_on_leave_button_pressed"]
